# auth

./: .env.example  .gitignore  .readthedocs.yaml  .travis.yml  DOCUMENTATION_README.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  alembic.ini  auth.db  auth_server.pid  debug_dotenv.py  dev_requirements.txt  docker-compose.redis.yml  docker-compose.yml  gunicorn_config.py  head-packagge.sh  index.html  params.json  pyproject.toml  requirements.txt  response.json  setup.py  showcase_api.sh  test.env  test_limiter.py  test_limiter_logic.py  tests.py
auth/: __init__.py  audit.py  circuit_breaker.py  client.py  config.py  database.py  decorators.py  docs_page.py  encryption.py  jwt_auth.py  logging_config.py  main.py  response_format.py  routes.py  sanitizer.py  schemas.py  server.py  service.py  validation.py  workflow_checker.py
auth/CAS/: __init__.py  authorization.py  authorization_sqlite.py
auth/CAS/REST/: client.py  service.py
auth/CAS/models/: db.py  db_sqlite.py
auth/cmd/: server.py
auth/core/REST/: client.py
auth/dal/: authorization.py  authorization_sqlite.py
auth/models/: mongo.py  sql.py  sqlite.py
auth/services/: rest_service.py  service.py
dependency-grap/: sbom
deploy/: README.md  auth.rodmena.app.conf  auth.service
docs/: API.md  DATABASE_POOLING.md  PLATFORM_ADOPTION.md  PYTHON_EXAMPLES.md  README.md  audit_logging.rst  changelog.rst  concepts.rst  conf.py  configuration.rst  contributing.rst  deployment.rst  encryption.rst  examples.rst  index.rst  installation.rst  production.rst  python_usage.rst  quickstart.rst  requirements.txt  rest_api.rst  security.rst  troubleshooting.rst
docs/api/: authorization.rst  client.rst  database.rst  models.rst  service.rst
migrations/: env.py  script.py.mako
migrations/versions/: 0001_widen_text.py
scripts/: create_db.py  reencrypt_pertenant.py  smoke_install.sh
tests/: conftest.py  test_auth_sqlite.py  test_authorization.py  test_authorization_sqlite.py  test_client.py  test_client_rest.py  test_cmd_server.py  test_db_mongo.py  test_db_sqlite.py  test_docs_page.py  test_encryption.py  test_fastapi.py  test_flask.py  test_migrations.py  test_phase_a_hardening.py  test_reencryption.py  test_routes_errors.py  test_server.py  test_service_lifecycle.py  test_service_rest.py  tests.py
tests/postgres/: test_postgres_integration.py
