[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth"
version = "1.6.0"
description = "Authorization for humans"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Farshid Ashouri", email = "farsheed.ashouri@gmail.com"}
]
keywords = ["authorization", "role", "auth", "groups", "membership", "ensure", "ldap"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "sqlalchemy>=2.0.0",
    "waitress>=2.0.0",
    "PyJWT>=2.0.0",
    "cryptography>=3.0.0",
    "APScheduler>=3.0.0",
    "psycopg[binary]>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.25.0",
    "bleach>=5.0.0",
    "python-json-logger>=3.1.0",
]

[project.optional-dependencies]
# Application-layer rate limiting (AUTH_ENABLE_RATE_LIMIT). Optional so the
# default install pulls no extra packages; the app degrades gracefully to
# "no app-layer limiting" if it is absent.
ratelimit = [
    "flask-limiter>=3.0.0",
]
# Database schema migrations (Alembic). Needed to run `alembic upgrade head`
# on a deployment; not required to import or serve the app.
migrations = [
    "alembic>=1.13.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "alembic>=1.13.0",
    "ruff>=0.0.260",
    "mypy>=1.0",
    "types-requests",
    "black>=22.0",
    "isort>=5.0",
    "responses>=0.23",
]

[project.scripts]
auth-server = "auth.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["auth*"]

[tool.setuptools.package-data]
"*" = ["*.rst"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-m", "not postgres",
]
markers = [
    "postgres: integration tests against a real PostgreSQL (run via 'make test-postgres')",
]

[tool.coverage.run]
source = ["auth"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["requests.*", "requests.exceptions.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["flask_limiter.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["auth.database"]
disable_error_code = ["valid-type", "misc"]

[[tool.mypy.overrides]]
module = ["auth.core.REST.client"]
disable_error_code = ["assignment"]

